--- a/main.tex
+++ b/main.tex
@@ -111,6 +111,12 @@
 \usepackage{authblk}
 \newcommand{\email}[1]{ \href{mailto:#1}{\texttt{{#1}}}}
 
+\newcommand{\MVVG}{\textsc{Maximum Value Vertex Guard}}
+\newcommand{\MLVG}{\textsc{Maximum Length Vertex Guard}}
+\newcommand{\DMVVG}{\textsc{Dynamic Maximum Value Vertex Guard}}
+
+
+
 \title{A Title}
 \date{}
 
@@ -132,9 +138,6 @@
 
 % short version main body
 \input{sections/introduction}
-\input{sections/hardness}
-\input{sections/approx}
-\input{sections/inapprox}
 
 
 
@@ -142,9 +145,5 @@
 \bibliographystyle{abbrvnat}
 \bibliography{refs}
 
-
-\newpage
-\appendix
-\input{appendix/appendixA}
 
 \end{document}
