--- a/refs.bib
+++ b/refs.bib
@@ -1,129 +1,49 @@
-@inproceedings{medya,
-  author = {Sourav Medya and Arlei Silva and Ambuj Singh and Prithwish Basu and Ananthram Swami},
-  year   = {2018},
-  pages  = {126-134},
-  title  = {Group Centrality Maximization via Network Design},
-  isbn   = {978-1-61197-532-1}
+@inproceedings{bukov,
+  author  = {Anton Bukov and Shay Solomon and Tianyi Zhang},
+  year    = {2025},
+  journal = {Proceedings of the 2025 Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages   = {824--863},
+  title   = {Nearly Optimal Dynamic Set Cover: Breaking the Quadratic-in-$f$ Time Barrier},
+  doi     = {10.1137/1.9781611978322.24}
 }
 
-@article{bilo,
-  author  = {Davide Bilò and Luciano Gualà and Guido Proietti},
-  title   = {Improved approximability and non-approximability results for graph diameter decreasing problems},
-  journal = {Theoretical Computer Science},
-  volume  = {417},
-  pages   = {12--22},
-  year    = {2012}
+@article{fragoudakis-paintings,
+  author  = {Christodoulos Fragoudakis and Euripides Markou and Stathis Zachos},
+  title   = {How to Place Efficiently Guards and Paintings in an Art Gallery},
+  journal = {Lecture Notes in Computer Science},
+  volume  = {3746},
+  pages   = {145--154},
+  month   = {November},
+  year    = {2005},
+  isbn    = {978-3-540-29673-7},
+  doi     = {10.1007/11573036_14}
 }
 
-@article{demaine,
-  author  = {Erik Demaine and Morteza Zadimoghaddam},
-  title   = {Minimizing the Diameter of a Network using Shortcut Edges},
-  journal = {Algorithm Theory - SWAT 2010},
-  volume  = {6139},
-  pages   = {420--431},
-  year    = {2010}
+@article{fragoudakis-interior,
+  author  = {Ioannis Emiris and Christodoulos Fragoudakis and Euripides Markou},
+  title   = {Maximizing the Guarded Interior of an Art Gallery},
+  journal = {European Workshop on Computational Geometry},
+  pages   = {165--169},
+  month   = {March},
+  year    = {2006}
 }
 
-@article{crescenzi,
-  author  = {Pierluigi Crescenzi and Gianlorenzo D'Angelo and Lorenzo Severini and Yllka Velaj},
-  title   = {Greedily Improving Our Own Closeness Centrality in a Network},
-  journal = {ACM Transcations on Knowledge Discovery from Data},
-  volume  = {11},
-  number  = {1},
-  pages   = {1-32},
-  year    = {2016}
-}
-
-@article{adriaens,
-  author = {Florian Adriaens and Aristides Gionis},
-  year   = {2022},
-  title  = {Diameter Minimization by Shortcutting with Degree Constraints},
-  doi    = {10.48550/arXiv.2209.00370}
-}
-
-@article{karp,
-  author  = {Richard Karp},
-  title   = {Reducibility among Combinatorial Problems},
-  journal = {Complexity of Computer Computations},
-  pages   = {85-103},
-  year    = {1972}
-}
-
-
-@article{yeh,
-  title   = {Analyzing the Relationship Between Difference and Ratio-Based Fairness Metrics},
-  author  = {Min-Hsuan Yeh and Blossom Metevier and Austin Hoag and Philip Thomas},
-  journal = {The 2024 ACM Conference on Fairness, Accountability and Transparency},
-  pages   = {518-528},
-  year    = {2024}
-}
-
-@article{li,
-  title   = {On the Minimum-Cardinality-Bounded-Diameter and the Bounded-Cardinality-Minimum-Diameter Edge Addition Problems},
-  author  = {Chung-Lun Li and S. Thomas McCormick and David Simchi-Levi},
-  journal = {Operations Research Letters},
-  volume  = {11},
-  issue   = {5},
-  pages   = {303-308},
-  year    = {1991}
-}
-
-@article{meyerson,
-  title   = {Minimizing Average Shortest Path Distances via Shortcut Edge Addition},
-  author  = {Adam Meyerson and Brian Tagiku},
-  journal = {APPROX 2009},
-  pages   = {272-285},
-  year    = {2009}
-}
-
-@article{fish,
-  title  = {Gaps in Information Access in Social Networks},
-  author = {Benjamin Fish and Ashkan Bashardoust and Danah Boyd and Sorelle A. Friedler and Carlos Scheidegger and Suresh Venkatasubramanian},
-  year   = {2019},
-  doi    = {10.1145/3308558.3313680}
-}
-
-@article{bashardoust,
-  title   = {Reducing Access Disparities in Networks using Edge Augmentation},
-  author  = {Ashkan Bashardoust and Sorelle Friedler and Carlos Scheidegger and Blair D. Sullivan and Suresh Venkatasubramanian},
-  year    = {2023},
-  journal = {FAccT '23},
-  pages   = {1635-1651}
-}
-
-@article{interian,
-  title   = {Polarization reduction by minimum-cardinality edge additions: Complexity and integer programming approaches},
-  author  = {Ruben Interian and Jorge R. Moreno and Celso C. Ribeiro},
-  year    = {2021},
-  journal = {International Transactions in Operational Research},
-  volume  = {28},
-  pages   = {1242-1264}
-}
-
-@article{gonzalez,
-  title   = {Clustering to minimize the maximum intercluster distance},
-  author  = {Teofilo F. Gonzalez},
-  year    = {1985},
-  journal = {Theoretical Computer Science},
+@article{fragoudakis-boundary,
+  author  = {Christodoulos Fragoudakis and Euripides Markou and Stathis Zachos},
+  title   = {Maximizing the guarded boundary of an Art Gallery is APX-Complete},
+  journal = {Computational Geometry},
   volume  = {38},
-  pages   = {293-306}
-}
-
-@article{boyd,
-  title   = {The Networked Nature of Algorithmic Discrimination},
-  author  = {danah boyd and Karen Levy and Alice Marwick},
-  year    = {2014},
-  journal = {Data and Discrimination: Collected Essays},
-  pages   = {43-57}
+  issue   = {3},
+  pages   = {170--180},
+  month   = {October},
+  year    = {2007}
 }
 
 
-@article{bhaskara,
-  title         = {Optimizing Information Access in Networks via Edge Augmentation},
-  author        = {Aditya Bhaskara and Alex Crane and Shweta Jain and Md Mumtahin Habib Ullah Mazumder and Blair D. Sullivan and Prasanth Yalamanchili},
-  year          = {2024},
-  eprint        = {2407.02624},
-  archiveprefix = {arXiv},
-  primaryclass  = {cs.DS},
-  url           = {https://arxiv.org/abs/2407.02624}
+@article{abdelkader,
+  author  = {Ahmed Abdelkader and Adhmed Saeed and Khaled Harras and Amr Mohamed},
+  title   = {The Inapproximabiliy of Illuminating Polygons by $\alpha$-Floodlights},
+  journal = {Proceedings of the Canadian Conference on Computational Geometry 2015},
+  month   = {August},
+  year    = {2015}
 }
