submitting proposal to Dianna

--- a/main.tex
+++ b/main.tex
@@ -117,15 +117,11 @@
 
 
 
-\title{A Title}
-\date{}
+\title{Maximizing the Guarded Boundary of a Dynamic Art Gallery}
+%\date{}
 
-\author[1]{An Author}
-\author[2]{Another Author}
+\author{Mihir Patel}
 
-
-\affil[1]{An affiliation}
-\affil[2]{Another affiliation}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
