--- a/paper/main.tex
+++ b/paper/main.tex
@@ -35,7 +35,7 @@
 
 \usepackage{thmtools, thm-restate}
 \newtheorem{redrule}{Reduction rule}
-\newtheorem*{claim}{Claim}
+\newtheorem{claim}{Claim}
 \newtheorem{lemma}{Lemma}
 \newtheorem{corollary}{Corollary}
 \newtheorem{observation}{Observation}
