--- a/paper/main.tex
+++ b/paper/main.tex
@@ -135,8 +135,8 @@
 % short version main body
 \input{sections/introduction}
 \input{sections/submodular}
-
-
+\input{sections/cost-examples}
+\input{sections/conclusion}
 
 
 \bibliographystyle{abbrvnat}
