added technical details in main body

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -114,6 +114,7 @@
 \newcommand{\MVVG}{\textsc{Maximum Value Vertex Guard}}
 \newcommand{\MLVG}{\textsc{Maximum Length Vertex Guard}}
 \newcommand{\DMVVG}{\textsc{Dynamic Maximum Value Vertex Guard}}
+\newcommand{\BMVVG}{\textsc{Budgeted Maximum Value Vertex Guard}}
 
 
 
