--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -47,3 +47,21 @@
   month   = {August},
   year    = {2015}
 }
+
+@article{feige,
+  author = {feige}
+}
+
+@article{cornuejols,
+  author = {cornuejols}
+}
+
+@article{khuller,
+  author = {khuller}
+}
+
+@article{visibility,
+  author = {visibility}
+}
+
+
