--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -30,6 +30,8 @@ For \DMVVG, we analyze the performance of several strategies, showing some of th
 
 
 
+We consider two problems proposed, and introudce a new problem. We focus on the weighted version.
+
 
 
 
