--- a/paper/sections/cost-examples.tex
+++ b/paper/sections/cost-examples.tex
@@ -1,6 +1,6 @@
-\section{Cost}
-
-
+\section{Intuition-Building Examples for \BMVVG{}}
+In this section, we show that three natural greedy strategies for \BMVVG{} may all perform arbitrarily badly compared to an optimal solution. In other words, these strategies will not automatically form approximations for \BMVVG{}, as there exists a problem instance where the total weight they achieve is \emph{not} boundedly close to the optimal. Note that this is in contrast to \MLVG{} and \MVVG{}, where the natural greedy strategy formed a constant-factor approximation, validating the added difficulty of \BMVVG{}. \\\\
+A first attempt could be to greedily add the vertex which maximizes the total weight guarded. To see why this fails, fix a $w\in\mathbb{N}$ such that $w\geq 3$. Then construct the polygon depicted in~\Cref{fig:greedy-heaviest}, with $w$ many ``cones''. The right edge of each cone has weight $w$, while all other edges have weight 1. The apex of each cone has cost $w$, while all other vertices have cost $w^2$. The budget $B$ is equal to $w^2$, and now we have an instance of \BMVVG{}, with~\Cref{fig:greedy-heaviest} and $B=w^2$.\\\\
 \begin{figure}
     \centering
     \begin{tikzpicture}
@@ -54,22 +54,14 @@
 
         \node[below, text=blue] at ($(a)!0.5!(j)$) {$1$};
 
-
-
-
     \end{tikzpicture}
-    \caption{apex vertices have cost w, everything else has w^2, budget is w^2.}
+    \caption{apex vertices have cost w, everything else has $w^2$, budget is $w^2$.}
     \label{fig:greedy-heaviest}
 \end{figure}
-
-
-
-
-
-
-
-
-
+\noindent
+Now the greedy strategy would start by choosing the vertex that maximizes the total weight guarded. Initially, this is one of the ``valleys'' in polygon, as these vertices guard $2w+2$ total weight, whereas all other vertices guard at most $w+1$. Any one of these vertices has cost $w^2$, so adding it to our solution uses our entire budget. Thus the algorithm which greedily maximizes total weight guarded ends up guarding $2w+2$ total weight on~\Cref{fig:greedy-heaviest}.\\\\
+However, an optimal strategy would be to place a guard at each apex. There are $w$ many apices and each one has cost $w$, so to use all of them would cost $w^2$ (which is exactly our budget). This guard placement also guards our entire polygon boundary, meaning the total weight guarded by the optimal set of guards is $w(w)+w(1)+1=w^2+w+1$. To compare total weight achieved between these two algorithms, the weight achieved by the greedy divided by the weight achieved by the optimal is equal to $\frac{2w+2}{w^2+w+1}$. We can make this value arbitrarily small as we increase $w$, meaning the greedy algorithm which maximizes total weight guarded performs arbitrarily badly compared to an optimal solution.\\\\
+Now we consider two alternative greedy strategies and show that they also fail, using~\Cref{fig:greedy-cheapest}. The first would be to greedily add the vertex with cheapest cost. The second would be to greedily add the vertex which maximizes the ratio of marginal gain in total weight to vertex cost. Starting with the first strategy, consider~\Cref{fig:greedy-cheapest} where weights and costs are displayed, and the budget is $w+4$. The cheapest vertex is $A$, which has cost of $2$. The vertex $A$ guards total weight of $2$, and once we have placed a guard there we cannot afford to place guards at any of the remaining vertices. Thus this greedy choosing the cheapest vertex achieves total weight of $2$ on this example. An optimal strategy would be to place a guard on either $D$ or $B$, this stays within budget and guards the entire polygon, achieving total weight of $w+3$. Comparing the weight achieved by each strategy, we have $\frac{2}{w+3}$, which we can make arbitrarily small as we increase $w$.\\\\
 \begin{figure}
     \centering
     \begin{tikzpicture}[scale=4]
@@ -118,6 +110,7 @@
     \caption{caption}
     \label{fig:greedy-cheapest}
 \end{figure}
+Similarly, if we wanted to greedily choose the vertex which maximizes the ratio of marginal gain in total weight to vertex cost (i.e., provides the best ``bang-for-your-buck''), we would choose vertex $A$. It guards weight of $2$ and costs $2$, giving a ratio of $1$. Any other vertex can guard at most $w+3$, while costing $w+4$, and $\frac{w+3}{w+4}<1$ for all $w$. Again, choosing $A$ prevents adding any more guards, achieving a total guarded weight of $2$, while an optimal strategy could guard $w+3$, and $\frac{2}{w+3}$ can be arbitrarily small for large $w$. 
 
 
 
